--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,25 +2,27 @@ name: Deploy Vite Project to GitHub Pages
 
 on:
   push:
-    branches:
-      - main  # 👈 deploy ONLY when you push to main
+    branches: [main]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
+    permissions:
+      contents: write
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build Vite project
+      - name: Build project
         run: npm run build
 
       - name: Deploy to GitHub Pages
