refactor: Rename project to "Asset Management"
Update the project name in package.json and metadata.json to accurately reflect the application's purpose.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-nexa---asset-management",
+  "name": "--asset-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
